checkers/tests/igj/ListNode.out
ListNode.java:29: error: (assignment.type.incompatible)
ListNode.java:34: error: (assignment.type.incompatible)
